| Summary: | ASTERISK-29211: res_musiconhold: Segfault on realtime music on hold without entries | ||
| Reporter: | Nathan Bruning (nathanb) | Labels: | |
| Date Opened: | 2020-12-10 17:05:38.000-0600 | Date Closed: | 2021-01-06 18:24:14.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_musiconhold |
| Versions: | 13.38.0 14.7.8 15.7.4 16.15.0 17.9.0 18.1.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When configuring asterisk to use real-time music on hold, it will segfault if there are no entries in the DB.
This is easy to spot in the sources: {{load_realtime_musiconhold}} doesn't check whether {{ast_load_realtime_multientry}} returns NULL. Simple fix would be to add a null check around the following code... | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-12-10 17:05:39.677-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. | ||